source/compiler/parser/parser.output
Nonterminals useless in grammar

    class_declaration_list
    class_declaration
    declaration_list
    declaration
    statement_list_statement


Terminals unused in grammar

    "["
    "]"
    "."
    ","
    "this"
    "new"
    "extends"
    "assert"
    "return"
    "length"
    "bool"


Rules useless in grammar

   33 class_declaration_list: class_declaration
   34                       | class_declaration_list class_declaration

   35 class_declaration: "class" "identifier" "{" declaration_list "}"
   36                  | "class" "identifier" "extends" "identifier" "{" declaration_list "}"

   37 declaration_list: declaration
   38                 | declaration_list declaration

   39 declaration: variable_declaration


State 48 conflicts: 1 shift/reduce
State 66 conflicts: 1 shift/reduce
State 67 conflicts: 1 shift/reduce
State 68 conflicts: 1 shift/reduce
State 69 conflicts: 1 shift/reduce
State 70 conflicts: 1 shift/reduce
State 71 conflicts: 1 shift/reduce
State 72 conflicts: 1 shift/reduce
State 73 conflicts: 1 shift/reduce
State 74 conflicts: 1 shift/reduce
State 75 conflicts: 1 shift/reduce
State 76 conflicts: 11 shift/reduce
State 77 conflicts: 1 shift/reduce


Grammar

    0 $accept: program "end of file"

    1 program: main_class

    2 main_class: "class" "identifier" "{" "public" "static" "void" "main" "(" ")" "{" statement_list "}" "}"

    3 variable_declaration: "int" "identifier" ";"

    4 statement: local_variable_statement
    5          | "{" statement_list "}"
    6          | "if" "(" expr ")" statement "else" statement
    7          | "if" "(" expr ")" statement
    8          | "while" "(" expr ")" statement
    9          | "println" "(" expr ")" ";"
   10          | "identifier" "=" expr ";"

   11 local_variable_statement: variable_declaration

   12 statement_list: statement
   13               | statement_list statement

   14 expr: "(" expr ")"
   15     | expr "+" expr
   16     | expr "-" expr
   17     | expr "*" expr
   18     | expr "/" expr
   19     | expr "==" expr
   20     | expr "!=" expr
   21     | expr "<" expr
   22     | expr ">" expr
   23     | expr "||" expr
   24     | expr "&&" expr
   25     | expr "%" expr
   26     | "identifier"
   27     | integer_literal
   28     | "true"
   29     | "false"
   30     | "!" expr

   31 integer_literal: "number"
   32                | "-" "number"


Terminals, with rules where they appear

    "end of file" (0) 0
    error (256)
    "+" <int> (258) 15
    "-" <int> (259) 16 32
    "*" <int> (260) 17
    "/" <int> (261) 18
    "==" <int> (262) 19
    "!=" <int> (263) 20
    "<" <int> (264) 21
    ">" <int> (265) 22
    "||" <int> (266) 23
    "&&" <int> (267) 24
    "%" <int> (268) 25
    "!" (269) 30
    "=" (270) 10
    "(" (271) 2 6 7 8 9 14
    ")" (272) 2 6 7 8 9 14
    "[" (273)
    "]" (274)
    "{" (275) 2 5
    "}" (276) 2 5
    "." (277)
    "," (278)
    ";" (279) 3 9 10
    "main" (280) 2
    "class" (281) 2
    "this" (282)
    "if" (283) 6 7
    "new" (284)
    "else" (285) 6
    "while" (286) 8
    "true" (287) 28
    "false" (288) 29
    "extends" (289)
    "assert" (290)
    "public" (291) 2
    "static" (292) 2
    "return" (293)
    "length" (294)
    "println" (295) 9
    "int" (296) 3
    "bool" (297)
    "void" (298) 2
    "identifier" <std::string> (299) 2 3 10 26
    "number" <int> (300) 31 32


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    program <Program*> (47)
        on left: 1
        on right: 0
    main_class <MainClass*> (48)
        on left: 2
        on right: 1
    variable_declaration <VariableDeclaration*> (49)
        on left: 3
        on right: 11
    statement <Statement*> (50)
        on left: 4 5 6 7 8 9 10
        on right: 6 7 8 12 13
    local_variable_statement <LocalVariableStatement*> (51)
        on left: 11
        on right: 4
    statement_list <StatementList*> (52)
        on left: 12 13
        on right: 2 5 13
    expr <Expression*> (53)
        on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30
        on right: 6 7 8 9 10 14 15 16 17 18 19 20 21 22 23 24 25 30
    integer_literal <int> (54)
        on left: 31 32
        on right: 27


State 0

    0 $accept: . program "end of file"

    "class"  shift, and go to state 1

    program     go to state 2
    main_class  go to state 3


State 1

    2 main_class: "class" . "identifier" "{" "public" "static" "void" "main" "(" ")" "{" statement_list "}" "}"

    "identifier"  shift, and go to state 4


State 2

    0 $accept: program . "end of file"

    "end of file"  shift, and go to state 5


State 3

    1 program: main_class .

    $default  reduce using rule 1 (program)


State 4

    2 main_class: "class" "identifier" . "{" "public" "static" "void" "main" "(" ")" "{" statement_list "}" "}"

    "{"  shift, and go to state 6


State 5

    0 $accept: program "end of file" .

    $default  accept


State 6

    2 main_class: "class" "identifier" "{" . "public" "static" "void" "main" "(" ")" "{" statement_list "}" "}"

    "public"  shift, and go to state 7


State 7

    2 main_class: "class" "identifier" "{" "public" . "static" "void" "main" "(" ")" "{" statement_list "}" "}"

    "static"  shift, and go to state 8


State 8

    2 main_class: "class" "identifier" "{" "public" "static" . "void" "main" "(" ")" "{" statement_list "}" "}"

    "void"  shift, and go to state 9


State 9

    2 main_class: "class" "identifier" "{" "public" "static" "void" . "main" "(" ")" "{" statement_list "}" "}"

    "main"  shift, and go to state 10


State 10

    2 main_class: "class" "identifier" "{" "public" "static" "void" "main" . "(" ")" "{" statement_list "}" "}"

    "("  shift, and go to state 11


State 11

    2 main_class: "class" "identifier" "{" "public" "static" "void" "main" "(" . ")" "{" statement_list "}" "}"

    ")"  shift, and go to state 12


State 12

    2 main_class: "class" "identifier" "{" "public" "static" "void" "main" "(" ")" . "{" statement_list "}" "}"

    "{"  shift, and go to state 13


State 13

    2 main_class: "class" "identifier" "{" "public" "static" "void" "main" "(" ")" "{" . statement_list "}" "}"

    "{"           shift, and go to state 14
    "if"          shift, and go to state 15
    "while"       shift, and go to state 16
    "println"     shift, and go to state 17
    "int"         shift, and go to state 18
    "identifier"  shift, and go to state 19

    variable_declaration      go to state 20
    statement                 go to state 21
    local_variable_statement  go to state 22
    statement_list            go to state 23


State 14

    5 statement: "{" . statement_list "}"

    "{"           shift, and go to state 14
    "if"          shift, and go to state 15
    "while"       shift, and go to state 16
    "println"     shift, and go to state 17
    "int"         shift, and go to state 18
    "identifier"  shift, and go to state 19

    variable_declaration      go to state 20
    statement                 go to state 21
    local_variable_statement  go to state 22
    statement_list            go to state 24


State 15

    6 statement: "if" . "(" expr ")" statement "else" statement
    7          | "if" . "(" expr ")" statement

    "("  shift, and go to state 25


State 16

    8 statement: "while" . "(" expr ")" statement

    "("  shift, and go to state 26


State 17

    9 statement: "println" . "(" expr ")" ";"

    "("  shift, and go to state 27


State 18

    3 variable_declaration: "int" . "identifier" ";"

    "identifier"  shift, and go to state 28


State 19

   10 statement: "identifier" . "=" expr ";"

    "="  shift, and go to state 29


State 20

   11 local_variable_statement: variable_declaration .

    $default  reduce using rule 11 (local_variable_statement)


State 21

   12 statement_list: statement .

    $default  reduce using rule 12 (statement_list)


State 22

    4 statement: local_variable_statement .

    $default  reduce using rule 4 (statement)


State 23

    2 main_class: "class" "identifier" "{" "public" "static" "void" "main" "(" ")" "{" statement_list . "}" "}"
   13 statement_list: statement_list . statement

    "{"           shift, and go to state 14
    "}"           shift, and go to state 30
    "if"          shift, and go to state 15
    "while"       shift, and go to state 16
    "println"     shift, and go to state 17
    "int"         shift, and go to state 18
    "identifier"  shift, and go to state 19

    variable_declaration      go to state 20
    statement                 go to state 31
    local_variable_statement  go to state 22


State 24

    5 statement: "{" statement_list . "}"
   13 statement_list: statement_list . statement

    "{"           shift, and go to state 14
    "}"           shift, and go to state 32
    "if"          shift, and go to state 15
    "while"       shift, and go to state 16
    "println"     shift, and go to state 17
    "int"         shift, and go to state 18
    "identifier"  shift, and go to state 19

    variable_declaration      go to state 20
    statement                 go to state 31
    local_variable_statement  go to state 22


State 25

    6 statement: "if" "(" . expr ")" statement "else" statement
    7          | "if" "(" . expr ")" statement

    "-"           shift, and go to state 33
    "!"           shift, and go to state 34
    "("           shift, and go to state 35
    "true"        shift, and go to state 36
    "false"       shift, and go to state 37
    "identifier"  shift, and go to state 38
    "number"      shift, and go to state 39

    expr             go to state 40
    integer_literal  go to state 41


State 26

    8 statement: "while" "(" . expr ")" statement

    "-"           shift, and go to state 33
    "!"           shift, and go to state 34
    "("           shift, and go to state 35
    "true"        shift, and go to state 36
    "false"       shift, and go to state 37
    "identifier"  shift, and go to state 38
    "number"      shift, and go to state 39

    expr             go to state 42
    integer_literal  go to state 41


State 27

    9 statement: "println" "(" . expr ")" ";"

    "-"           shift, and go to state 33
    "!"           shift, and go to state 34
    "("           shift, and go to state 35
    "true"        shift, and go to state 36
    "false"       shift, and go to state 37
    "identifier"  shift, and go to state 38
    "number"      shift, and go to state 39

    expr             go to state 43
    integer_literal  go to state 41


State 28

    3 variable_declaration: "int" "identifier" . ";"

    ";"  shift, and go to state 44


State 29

   10 statement: "identifier" "=" . expr ";"

    "-"           shift, and go to state 33
    "!"           shift, and go to state 34
    "("           shift, and go to state 35
    "true"        shift, and go to state 36
    "false"       shift, and go to state 37
    "identifier"  shift, and go to state 38
    "number"      shift, and go to state 39

    expr             go to state 45
    integer_literal  go to state 41


State 30

    2 main_class: "class" "identifier" "{" "public" "static" "void" "main" "(" ")" "{" statement_list "}" . "}"

    "}"  shift, and go to state 46


State 31

   13 statement_list: statement_list statement .

    $default  reduce using rule 13 (statement_list)


State 32

    5 statement: "{" statement_list "}" .

    $default  reduce using rule 5 (statement)


State 33

   32 integer_literal: "-" . "number"

    "number"  shift, and go to state 47


State 34

   30 expr: "!" . expr

    "-"           shift, and go to state 33
    "!"           shift, and go to state 34
    "("           shift, and go to state 35
    "true"        shift, and go to state 36
    "false"       shift, and go to state 37
    "identifier"  shift, and go to state 38
    "number"      shift, and go to state 39

    expr             go to state 48
    integer_literal  go to state 41


State 35

   14 expr: "(" . expr ")"

    "-"           shift, and go to state 33
    "!"           shift, and go to state 34
    "("           shift, and go to state 35
    "true"        shift, and go to state 36
    "false"       shift, and go to state 37
    "identifier"  shift, and go to state 38
    "number"      shift, and go to state 39

    expr             go to state 49
    integer_literal  go to state 41


State 36

   28 expr: "true" .

    $default  reduce using rule 28 (expr)


State 37

   29 expr: "false" .

    $default  reduce using rule 29 (expr)


State 38

   26 expr: "identifier" .

    $default  reduce using rule 26 (expr)


State 39

   31 integer_literal: "number" .

    $default  reduce using rule 31 (integer_literal)


State 40

    6 statement: "if" "(" expr . ")" statement "else" statement
    7          | "if" "(" expr . ")" statement
   15 expr: expr . "+" expr
   16     | expr . "-" expr
   17     | expr . "*" expr
   18     | expr . "/" expr
   19     | expr . "==" expr
   20     | expr . "!=" expr
   21     | expr . "<" expr
   22     | expr . ">" expr
   23     | expr . "||" expr
   24     | expr . "&&" expr
   25     | expr . "%" expr

    "+"   shift, and go to state 50
    "-"   shift, and go to state 51
    "*"   shift, and go to state 52
    "/"   shift, and go to state 53
    "=="  shift, and go to state 54
    "!="  shift, and go to state 55
    "<"   shift, and go to state 56
    ">"   shift, and go to state 57
    "||"  shift, and go to state 58
    "&&"  shift, and go to state 59
    "%"   shift, and go to state 60
    ")"   shift, and go to state 61


State 41

   27 expr: integer_literal .

    $default  reduce using rule 27 (expr)


State 42

    8 statement: "while" "(" expr . ")" statement
   15 expr: expr . "+" expr
   16     | expr . "-" expr
   17     | expr . "*" expr
   18     | expr . "/" expr
   19     | expr . "==" expr
   20     | expr . "!=" expr
   21     | expr . "<" expr
   22     | expr . ">" expr
   23     | expr . "||" expr
   24     | expr . "&&" expr
   25     | expr . "%" expr

    "+"   shift, and go to state 50
    "-"   shift, and go to state 51
    "*"   shift, and go to state 52
    "/"   shift, and go to state 53
    "=="  shift, and go to state 54
    "!="  shift, and go to state 55
    "<"   shift, and go to state 56
    ">"   shift, and go to state 57
    "||"  shift, and go to state 58
    "&&"  shift, and go to state 59
    "%"   shift, and go to state 60
    ")"   shift, and go to state 62


State 43

    9 statement: "println" "(" expr . ")" ";"
   15 expr: expr . "+" expr
   16     | expr . "-" expr
   17     | expr . "*" expr
   18     | expr . "/" expr
   19     | expr . "==" expr
   20     | expr . "!=" expr
   21     | expr . "<" expr
   22     | expr . ">" expr
   23     | expr . "||" expr
   24     | expr . "&&" expr
   25     | expr . "%" expr

    "+"   shift, and go to state 50
    "-"   shift, and go to state 51
    "*"   shift, and go to state 52
    "/"   shift, and go to state 53
    "=="  shift, and go to state 54
    "!="  shift, and go to state 55
    "<"   shift, and go to state 56
    ">"   shift, and go to state 57
    "||"  shift, and go to state 58
    "&&"  shift, and go to state 59
    "%"   shift, and go to state 60
    ")"   shift, and go to state 63


State 44

    3 variable_declaration: "int" "identifier" ";" .

    $default  reduce using rule 3 (variable_declaration)


State 45

   10 statement: "identifier" "=" expr . ";"
   15 expr: expr . "+" expr
   16     | expr . "-" expr
   17     | expr . "*" expr
   18     | expr . "/" expr
   19     | expr . "==" expr
   20     | expr . "!=" expr
   21     | expr . "<" expr
   22     | expr . ">" expr
   23     | expr . "||" expr
   24     | expr . "&&" expr
   25     | expr . "%" expr

    "+"   shift, and go to state 50
    "-"   shift, and go to state 51
    "*"   shift, and go to state 52
    "/"   shift, and go to state 53
    "=="  shift, and go to state 54
    "!="  shift, and go to state 55
    "<"   shift, and go to state 56
    ">"   shift, and go to state 57
    "||"  shift, and go to state 58
    "&&"  shift, and go to state 59
    "%"   shift, and go to state 60
    ";"   shift, and go to state 64


State 46

    2 main_class: "class" "identifier" "{" "public" "static" "void" "main" "(" ")" "{" statement_list "}" "}" .

    $default  reduce using rule 2 (main_class)


State 47

   32 integer_literal: "-" "number" .

    $default  reduce using rule 32 (integer_literal)


State 48

   15 expr: expr . "+" expr
   16     | expr . "-" expr
   17     | expr . "*" expr
   18     | expr . "/" expr
   19     | expr . "==" expr
   20     | expr . "!=" expr
   21     | expr . "<" expr
   22     | expr . ">" expr
   23     | expr . "||" expr
   24     | expr . "&&" expr
   25     | expr . "%" expr
   30     | "!" expr .

    "+"  shift, and go to state 50
    "-"  shift, and go to state 51
    "*"  shift, and go to state 52
    "/"  shift, and go to state 53
    "<"  shift, and go to state 56
    ">"  shift, and go to state 57
    "%"  shift, and go to state 60

    "%"       [reduce using rule 30 (expr)]
    $default  reduce using rule 30 (expr)


State 49

   14 expr: "(" expr . ")"
   15     | expr . "+" expr
   16     | expr . "-" expr
   17     | expr . "*" expr
   18     | expr . "/" expr
   19     | expr . "==" expr
   20     | expr . "!=" expr
   21     | expr . "<" expr
   22     | expr . ">" expr
   23     | expr . "||" expr
   24     | expr . "&&" expr
   25     | expr . "%" expr

    "+"   shift, and go to state 50
    "-"   shift, and go to state 51
    "*"   shift, and go to state 52
    "/"   shift, and go to state 53
    "=="  shift, and go to state 54
    "!="  shift, and go to state 55
    "<"   shift, and go to state 56
    ">"   shift, and go to state 57
    "||"  shift, and go to state 58
    "&&"  shift, and go to state 59
    "%"   shift, and go to state 60
    ")"   shift, and go to state 65


State 50

   15 expr: expr "+" . expr

    "-"           shift, and go to state 33
    "!"           shift, and go to state 34
    "("           shift, and go to state 35
    "true"        shift, and go to state 36
    "false"       shift, and go to state 37
    "identifier"  shift, and go to state 38
    "number"      shift, and go to state 39

    expr             go to state 66
    integer_literal  go to state 41


State 51

   16 expr: expr "-" . expr

    "-"           shift, and go to state 33
    "!"           shift, and go to state 34
    "("           shift, and go to state 35
    "true"        shift, and go to state 36
    "false"       shift, and go to state 37
    "identifier"  shift, and go to state 38
    "number"      shift, and go to state 39

    expr             go to state 67
    integer_literal  go to state 41


State 52

   17 expr: expr "*" . expr

    "-"           shift, and go to state 33
    "!"           shift, and go to state 34
    "("           shift, and go to state 35
    "true"        shift, and go to state 36
    "false"       shift, and go to state 37
    "identifier"  shift, and go to state 38
    "number"      shift, and go to state 39

    expr             go to state 68
    integer_literal  go to state 41


State 53

   18 expr: expr "/" . expr

    "-"           shift, and go to state 33
    "!"           shift, and go to state 34
    "("           shift, and go to state 35
    "true"        shift, and go to state 36
    "false"       shift, and go to state 37
    "identifier"  shift, and go to state 38
    "number"      shift, and go to state 39

    expr             go to state 69
    integer_literal  go to state 41


State 54

   19 expr: expr "==" . expr

    "-"           shift, and go to state 33
    "!"           shift, and go to state 34
    "("           shift, and go to state 35
    "true"        shift, and go to state 36
    "false"       shift, and go to state 37
    "identifier"  shift, and go to state 38
    "number"      shift, and go to state 39

    expr             go to state 70
    integer_literal  go to state 41


State 55

   20 expr: expr "!=" . expr

    "-"           shift, and go to state 33
    "!"           shift, and go to state 34
    "("           shift, and go to state 35
    "true"        shift, and go to state 36
    "false"       shift, and go to state 37
    "identifier"  shift, and go to state 38
    "number"      shift, and go to state 39

    expr             go to state 71
    integer_literal  go to state 41


State 56

   21 expr: expr "<" . expr

    "-"           shift, and go to state 33
    "!"           shift, and go to state 34
    "("           shift, and go to state 35
    "true"        shift, and go to state 36
    "false"       shift, and go to state 37
    "identifier"  shift, and go to state 38
    "number"      shift, and go to state 39

    expr             go to state 72
    integer_literal  go to state 41


State 57

   22 expr: expr ">" . expr

    "-"           shift, and go to state 33
    "!"           shift, and go to state 34
    "("           shift, and go to state 35
    "true"        shift, and go to state 36
    "false"       shift, and go to state 37
    "identifier"  shift, and go to state 38
    "number"      shift, and go to state 39

    expr             go to state 73
    integer_literal  go to state 41


State 58

   23 expr: expr "||" . expr

    "-"           shift, and go to state 33
    "!"           shift, and go to state 34
    "("           shift, and go to state 35
    "true"        shift, and go to state 36
    "false"       shift, and go to state 37
    "identifier"  shift, and go to state 38
    "number"      shift, and go to state 39

    expr             go to state 74
    integer_literal  go to state 41


State 59

   24 expr: expr "&&" . expr

    "-"           shift, and go to state 33
    "!"           shift, and go to state 34
    "("           shift, and go to state 35
    "true"        shift, and go to state 36
    "false"       shift, and go to state 37
    "identifier"  shift, and go to state 38
    "number"      shift, and go to state 39

    expr             go to state 75
    integer_literal  go to state 41


State 60

   25 expr: expr "%" . expr

    "-"           shift, and go to state 33
    "!"           shift, and go to state 34
    "("           shift, and go to state 35
    "true"        shift, and go to state 36
    "false"       shift, and go to state 37
    "identifier"  shift, and go to state 38
    "number"      shift, and go to state 39

    expr             go to state 76
    integer_literal  go to state 41


State 61

    6 statement: "if" "(" expr ")" . statement "else" statement
    7          | "if" "(" expr ")" . statement

    "{"           shift, and go to state 14
    "if"          shift, and go to state 15
    "while"       shift, and go to state 16
    "println"     shift, and go to state 17
    "int"         shift, and go to state 18
    "identifier"  shift, and go to state 19

    variable_declaration      go to state 20
    statement                 go to state 77
    local_variable_statement  go to state 22


State 62

    8 statement: "while" "(" expr ")" . statement

    "{"           shift, and go to state 14
    "if"          shift, and go to state 15
    "while"       shift, and go to state 16
    "println"     shift, and go to state 17
    "int"         shift, and go to state 18
    "identifier"  shift, and go to state 19

    variable_declaration      go to state 20
    statement                 go to state 78
    local_variable_statement  go to state 22


State 63

    9 statement: "println" "(" expr ")" . ";"

    ";"  shift, and go to state 79


State 64

   10 statement: "identifier" "=" expr ";" .

    $default  reduce using rule 10 (statement)


State 65

   14 expr: "(" expr ")" .

    $default  reduce using rule 14 (expr)


State 66

   15 expr: expr . "+" expr
   15     | expr "+" expr .
   16     | expr . "-" expr
   17     | expr . "*" expr
   18     | expr . "/" expr
   19     | expr . "==" expr
   20     | expr . "!=" expr
   21     | expr . "<" expr
   22     | expr . ">" expr
   23     | expr . "||" expr
   24     | expr . "&&" expr
   25     | expr . "%" expr

    "*"  shift, and go to state 52
    "/"  shift, and go to state 53
    "%"  shift, and go to state 60

    "%"       [reduce using rule 15 (expr)]
    $default  reduce using rule 15 (expr)


State 67

   15 expr: expr . "+" expr
   16     | expr . "-" expr
   16     | expr "-" expr .
   17     | expr . "*" expr
   18     | expr . "/" expr
   19     | expr . "==" expr
   20     | expr . "!=" expr
   21     | expr . "<" expr
   22     | expr . ">" expr
   23     | expr . "||" expr
   24     | expr . "&&" expr
   25     | expr . "%" expr

    "*"  shift, and go to state 52
    "/"  shift, and go to state 53
    "%"  shift, and go to state 60

    "%"       [reduce using rule 16 (expr)]
    $default  reduce using rule 16 (expr)


State 68

   15 expr: expr . "+" expr
   16     | expr . "-" expr
   17     | expr . "*" expr
   17     | expr "*" expr .
   18     | expr . "/" expr
   19     | expr . "==" expr
   20     | expr . "!=" expr
   21     | expr . "<" expr
   22     | expr . ">" expr
   23     | expr . "||" expr
   24     | expr . "&&" expr
   25     | expr . "%" expr

    "%"  shift, and go to state 60

    "%"       [reduce using rule 17 (expr)]
    $default  reduce using rule 17 (expr)


State 69

   15 expr: expr . "+" expr
   16     | expr . "-" expr
   17     | expr . "*" expr
   18     | expr . "/" expr
   18     | expr "/" expr .
   19     | expr . "==" expr
   20     | expr . "!=" expr
   21     | expr . "<" expr
   22     | expr . ">" expr
   23     | expr . "||" expr
   24     | expr . "&&" expr
   25     | expr . "%" expr

    "%"  shift, and go to state 60

    "%"       [reduce using rule 18 (expr)]
    $default  reduce using rule 18 (expr)


State 70

   15 expr: expr . "+" expr
   16     | expr . "-" expr
   17     | expr . "*" expr
   18     | expr . "/" expr
   19     | expr . "==" expr
   19     | expr "==" expr .
   20     | expr . "!=" expr
   21     | expr . "<" expr
   22     | expr . ">" expr
   23     | expr . "||" expr
   24     | expr . "&&" expr
   25     | expr . "%" expr

    "+"  shift, and go to state 50
    "-"  shift, and go to state 51
    "*"  shift, and go to state 52
    "/"  shift, and go to state 53
    "<"  shift, and go to state 56
    ">"  shift, and go to state 57
    "%"  shift, and go to state 60

    "%"       [reduce using rule 19 (expr)]
    $default  reduce using rule 19 (expr)


State 71

   15 expr: expr . "+" expr
   16     | expr . "-" expr
   17     | expr . "*" expr
   18     | expr . "/" expr
   19     | expr . "==" expr
   20     | expr . "!=" expr
   20     | expr "!=" expr .
   21     | expr . "<" expr
   22     | expr . ">" expr
   23     | expr . "||" expr
   24     | expr . "&&" expr
   25     | expr . "%" expr

    "+"  shift, and go to state 50
    "-"  shift, and go to state 51
    "*"  shift, and go to state 52
    "/"  shift, and go to state 53
    "<"  shift, and go to state 56
    ">"  shift, and go to state 57
    "%"  shift, and go to state 60

    "%"       [reduce using rule 20 (expr)]
    $default  reduce using rule 20 (expr)


State 72

   15 expr: expr . "+" expr
   16     | expr . "-" expr
   17     | expr . "*" expr
   18     | expr . "/" expr
   19     | expr . "==" expr
   20     | expr . "!=" expr
   21     | expr . "<" expr
   21     | expr "<" expr .
   22     | expr . ">" expr
   23     | expr . "||" expr
   24     | expr . "&&" expr
   25     | expr . "%" expr

    "+"  shift, and go to state 50
    "-"  shift, and go to state 51
    "*"  shift, and go to state 52
    "/"  shift, and go to state 53
    "%"  shift, and go to state 60

    "%"       [reduce using rule 21 (expr)]
    $default  reduce using rule 21 (expr)


State 73

   15 expr: expr . "+" expr
   16     | expr . "-" expr
   17     | expr . "*" expr
   18     | expr . "/" expr
   19     | expr . "==" expr
   20     | expr . "!=" expr
   21     | expr . "<" expr
   22     | expr . ">" expr
   22     | expr ">" expr .
   23     | expr . "||" expr
   24     | expr . "&&" expr
   25     | expr . "%" expr

    "+"  shift, and go to state 50
    "-"  shift, and go to state 51
    "*"  shift, and go to state 52
    "/"  shift, and go to state 53
    "%"  shift, and go to state 60

    "%"       [reduce using rule 22 (expr)]
    $default  reduce using rule 22 (expr)


State 74

   15 expr: expr . "+" expr
   16     | expr . "-" expr
   17     | expr . "*" expr
   18     | expr . "/" expr
   19     | expr . "==" expr
   20     | expr . "!=" expr
   21     | expr . "<" expr
   22     | expr . ">" expr
   23     | expr . "||" expr
   23     | expr "||" expr .
   24     | expr . "&&" expr
   25     | expr . "%" expr

    "+"   shift, and go to state 50
    "-"   shift, and go to state 51
    "*"   shift, and go to state 52
    "/"   shift, and go to state 53
    "=="  shift, and go to state 54
    "!="  shift, and go to state 55
    "<"   shift, and go to state 56
    ">"   shift, and go to state 57
    "%"   shift, and go to state 60

    "%"       [reduce using rule 23 (expr)]
    $default  reduce using rule 23 (expr)


State 75

   15 expr: expr . "+" expr
   16     | expr . "-" expr
   17     | expr . "*" expr
   18     | expr . "/" expr
   19     | expr . "==" expr
   20     | expr . "!=" expr
   21     | expr . "<" expr
   22     | expr . ">" expr
   23     | expr . "||" expr
   24     | expr . "&&" expr
   24     | expr "&&" expr .
   25     | expr . "%" expr

    "+"   shift, and go to state 50
    "-"   shift, and go to state 51
    "*"   shift, and go to state 52
    "/"   shift, and go to state 53
    "=="  shift, and go to state 54
    "!="  shift, and go to state 55
    "<"   shift, and go to state 56
    ">"   shift, and go to state 57
    "%"   shift, and go to state 60

    "%"       [reduce using rule 24 (expr)]
    $default  reduce using rule 24 (expr)


State 76

   15 expr: expr . "+" expr
   16     | expr . "-" expr
   17     | expr . "*" expr
   18     | expr . "/" expr
   19     | expr . "==" expr
   20     | expr . "!=" expr
   21     | expr . "<" expr
   22     | expr . ">" expr
   23     | expr . "||" expr
   24     | expr . "&&" expr
   25     | expr . "%" expr
   25     | expr "%" expr .

    "+"   shift, and go to state 50
    "-"   shift, and go to state 51
    "*"   shift, and go to state 52
    "/"   shift, and go to state 53
    "=="  shift, and go to state 54
    "!="  shift, and go to state 55
    "<"   shift, and go to state 56
    ">"   shift, and go to state 57
    "||"  shift, and go to state 58
    "&&"  shift, and go to state 59
    "%"   shift, and go to state 60

    "+"       [reduce using rule 25 (expr)]
    "-"       [reduce using rule 25 (expr)]
    "*"       [reduce using rule 25 (expr)]
    "/"       [reduce using rule 25 (expr)]
    "=="      [reduce using rule 25 (expr)]
    "!="      [reduce using rule 25 (expr)]
    "<"       [reduce using rule 25 (expr)]
    ">"       [reduce using rule 25 (expr)]
    "||"      [reduce using rule 25 (expr)]
    "&&"      [reduce using rule 25 (expr)]
    "%"       [reduce using rule 25 (expr)]
    $default  reduce using rule 25 (expr)


State 77

    6 statement: "if" "(" expr ")" statement . "else" statement
    7          | "if" "(" expr ")" statement .

    "else"  shift, and go to state 80

    "else"    [reduce using rule 7 (statement)]
    $default  reduce using rule 7 (statement)


State 78

    8 statement: "while" "(" expr ")" statement .

    $default  reduce using rule 8 (statement)


State 79

    9 statement: "println" "(" expr ")" ";" .

    $default  reduce using rule 9 (statement)


State 80

    6 statement: "if" "(" expr ")" statement "else" . statement

    "{"           shift, and go to state 14
    "if"          shift, and go to state 15
    "while"       shift, and go to state 16
    "println"     shift, and go to state 17
    "int"         shift, and go to state 18
    "identifier"  shift, and go to state 19

    variable_declaration      go to state 20
    statement                 go to state 81
    local_variable_statement  go to state 22


State 81

    6 statement: "if" "(" expr ")" statement "else" statement .

    $default  reduce using rule 6 (statement)
